# copy-of-copy-of-omniscient-ai-platform

./: .dockerignore  .env  .env.example  .env.production.example  .firebaserc  .gcloudignore  .gcloudignore.bak  .gitattributes  .gitignore  .vercelignore  ADVANCED_EXTENSIONS_IMPLEMENTATION.md  ADVANCED_EXTENSIONS_SUMMARY.md  ADVANCED_FEATURES_PHASE2.md  ADVANCED_FEATURES_PHASE3.md  ADVANCED_FEATURES_PHASE5.md  ADVANCED_PLATFORM_EXTENSIONS.md  AI_ML_ENHANCEMENTS.md  AI_ML_FEATURES_IMPLEMENTATION.md  AI_ML_NADGRADNJE_SL.md  API_MIGRATION_GUIDE.md  ARCHITECTURE_DIAGRAM.md  Auto-Generate-Web-Content.ps1  Auto-Record-Demo.ps1  CLOUD_TESTING_SETUP.md  COMPLETE_PR_SUMMARY.md  COMPREHENSIVE_FEATURES_IMPLEMENTATION.md  COST_OPTIMIZATION_GUIDE.md  Clean-Deep.ps1  Clean-Games.ps1  Clean-Ultimate.ps1  Create-Complete-Video.ps1  Create-Demo-Video-Simple.ps1  Create-Desktop-Shortcut.ps1  Create-Final-Video.ps1  Create-Video-Shortcut.ps1  DASHBOARD_BUILD_CONFIG.md  DASHBOARD_DEPLOYMENT_README.md  DASHBOARD_ENHANCEMENT_STRATEGY.md  DELETE_GOOGLE_CLOUD_SERVICES.md  DEPLOYMENT_BI.md  (+256 more)
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.idx/: dev.nix
OmniStarter_from_C/: brainActivity.js  omni platforma.txt  package-lock.json  package.json  server.js
agents/: Dockerfile  agent_adapt.py  agent_agentic_ai.py  agent_arbitrage.py  agent_autolearn.py  agent_burnout.py  agent_code_optimizer.py  agent_devops_router.py  agent_docgen.py  agent_elevator.py  agent_gcp.py  (+21 more)
sdks/python/: README.md  pyproject.toml
sdks/python/omni_client/: __init__.py  client.py  exceptions.py
(+1105 files in other folders)
